@@ -220,6 +220,8 @@ extern "C" uint8_t u8x8_byte_arduino_4wire_sw_spi(u8x8_t *u8x8, uint8_t msg, uin
 	  b = *data;
 	  data++;
 	  arg_int--;
+	  /* issue 156, check for speed */
+#if F_CPU <= 17000000
 	  if ( b == 0 )
 	  {
 	    *arduino_data_port &= arduino_data_n_mask;
@@ -230,6 +232,7 @@ extern "C" uint8_t u8x8_byte_arduino_4wire_sw_spi(u8x8_t *u8x8, uint8_t msg, uin
 	    }
 	  }
 	  else
+#endif
 	  {
 	    for( i = 0; i < 8; i++ )
 	    {
@@ -252,6 +255,8 @@ extern "C" uint8_t u8x8_byte_arduino_4wire_sw_spi(u8x8_t *u8x8, uint8_t msg, uin
 	  b = *data;
 	  data++;
 	  arg_int--;
+	  /* issue 156, check for speed */
+#if F_CPU <= 17000000
 	  if ( b == 0 )
 	  {
 	    *arduino_data_port &= arduino_data_n_mask;
@@ -262,6 +267,7 @@ extern "C" uint8_t u8x8_byte_arduino_4wire_sw_spi(u8x8_t *u8x8, uint8_t msg, uin
 	    }
 	  }
 	  else
+#endif
 	  {
 	    for( i = 0; i < 8; i++ )
 	    {
