@@ -279,6 +279,69 @@ void u8g2_ll_hvline_vertical_top_lsb(u8g2_t *u8g2, u8g2_uint_t x, u8g2_uint_t y,
     ST7920
 */
 
+
+
+void u8g2_ll_hvline_horizontal_right_lsb(u8g2_t *u8g2, u8g2_uint_t x, u8g2_uint_t y, u8g2_uint_t len, uint8_t dir)
+{
+  uint16_t offset;
+  uint8_t *ptr;
+  uint8_t bit_pos;
+  uint8_t mask;
+  uint8_t tile_width = u8g2_GetU8x8(u8g2)->display_info->tile_width;
+  
+  if ( dir == 0 )
+  {
+    do
+    {
+      bit_pos = x;		/* overflow truncate is ok here... */
+      bit_pos &= 7; 	/* ... because only the lowest 3 bits are needed */
+      mask = 128;
+      mask >>= bit_pos;
+
+      offset = y;		/* y might be 8 or 16 bit, but we need 16 bit, so use a 16 bit variable */
+      offset *= tile_width;
+      offset += x>>3;
+      ptr = u8g2->tile_buf_ptr;
+      ptr += offset;
+      
+
+      if ( u8g2->draw_color <= 1 )
+	*ptr |= mask;
+      if ( u8g2->draw_color != 1 )
+	*ptr ^= mask;
+      
+      x++;
+      len--;
+    } while( len != 0 );
+  }
+  else
+  {
+    bit_pos = x;		/* overflow truncate is ok here... */
+    bit_pos &= 7; 	/* ... because only the lowest 3 bits are needed */
+    mask = 128;
+    mask >>= bit_pos;
+    
+    offset = y;		/* y might be 8 or 16 bit, but we need 16 bit, so use a 16 bit variable */
+    offset *= tile_width;
+    offset += x>>3;
+    ptr = u8g2->tile_buf_ptr;
+    ptr += offset;
+    do
+    {
+      if ( u8g2->draw_color <= 1 )
+	*ptr |= mask;
+      if ( u8g2->draw_color != 1 )
+	*ptr ^= mask;
+      
+      ptr += tile_width;
+      //y++;
+      len--;
+    } while( len != 0 );
+  }
+}
+
+
+
 /*
   x,y position within the buffer
 */
@@ -312,17 +375,6 @@ static void u8g2_draw_pixel_horizontal_right_lsb(u8g2_t *u8g2, u8g2_uint_t x, u8
   if ( u8g2->draw_color != 1 )
     *ptr ^= mask;
   
-  /*
-  if ( u8g2->draw_color != 0 )
-  {
-    *ptr |= mask;
-  }
-  else
-  {
-    mask ^= 255;
-    *ptr &= mask;
-  } 
-    */
 }
 
 /*
@@ -333,7 +385,7 @@ static void u8g2_draw_pixel_horizontal_right_lsb(u8g2_t *u8g2, u8g2_uint_t x, u8
   asumption: 
     all clipping done
 */
-void u8g2_ll_hvline_horizontal_right_lsb(u8g2_t *u8g2, u8g2_uint_t x, u8g2_uint_t y, u8g2_uint_t len, uint8_t dir)
+void x_u8g2_ll_hvline_horizontal_right_lsb(u8g2_t *u8g2, u8g2_uint_t x, u8g2_uint_t y, u8g2_uint_t len, uint8_t dir)
 {
   if ( dir == 0 )
   {
